# clink

./: .gitignore  README.md
client/windows/: clink.sln
client/windows/clink_cuda/: clink_cuda.vcxproj  clink_cuda.vcxproj.filters  cuda_export_impl_gen.py  dllmain.cpp  driver_api.h  export.cpp  export.h  kcp.cpp  kcp.h  render.cpp  render.h  socket.h  tcp.cpp  tcp.h  utilities.h  zstd.cpp
client/windows/clink_nvapi/: clink_nvapi.vcxproj  clink_nvapi.vcxproj.filters  dllmain.cpp  export.cpp  export.h
client/windows/common/: global.h
client/windows/common/libs/: libkcp.lib
client/windows/test/: test.cpp  test.vcxproj
server/: main.cc  meson.build
server/include/: cuda.h  kcp.h  logger.h  render.h  server.h  socket.h  tcp.h  utilities.h
server/include/linuz/cuda/: cuda.h  driver_api.h
server/render/: meson.build  render.cc
server/render/cuda/: cuda.cc  meson.build
server/server/: meson.build  server.cc
server/socket/: kcp.cc  meson.build  socket.cc  tcp.cc
server/utilities/: image.cc  logger.cc  meson.build  zstd.cc
